# soar-cli

./: .env  .env.example  LICENSE  README.md  README.md.bak  pyproject.toml
docs/: wechat_pr_article.md
soar_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
soar_client/: __init__.py  client.py  main.py
soar_client/commands/: __init__.py  playbook.py
tests/: __init__.py  test_playbook.py
