[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soar-cli"
version = "0.1.0"
description = "A command-line interface for OctoMation / HoneyGuide SOAR"
authors = [
    {name = "Chris WZ", email = "chris@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]

[project.scripts]
soar-cli = "soar_client.main:app"
